# server/router/sys_base.go
@@ -12,7 +12,7 @@ func InitBaseRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
 	{
 		//BaseRouter.POST("login", v1.Login)
 		BaseRouter.POST("captcha", v1.Captcha)
-		BaseRouter.POST("updatecasbin", v1.UpdateCasbin)
+		BaseRouter.POST("UpdateCasbin", v1.UpdateCasbin)
 	}
 	return BaseRouter
 }
